--- a/Css/Index.css
+++ b/Css/Index.css
@@ -1,4 +1,24 @@
 
+body{
+    height:initial;
+    
+}
+
+.imagenfondo {
+    display: flex;
+background-image: url(../Img/FondoDePagina-Grande.jpg);
+height: auto;
+}
+.Monster-Hi {
+flex-direction: column;
+    width: 20px;
+    height: 20px;
+    }
+.Monster-Black {
+    flex-direction: column;
+        width: 20px;
+        height: 20px;
+     }
 .header_nav{
     list-style: none;
     flex-direction: row;
